Remove unnecessary log and fix backgrond on smaller devices

--- a/src/components/todo-list/TodoList.scss
+++ b/src/components/todo-list/TodoList.scss
@@ -2,6 +2,7 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 1rem;
+  background-color: var(--secondary-color);
 
   &-title {
     background-color: var(--main-color);
